# seri_protocol

./: .gitignore  README.md  cca.md
backend/: .env.example  Cargo.toml  migrations.sql
backend/src/: accounts.rs  api.rs  bid_tx.rs  claim_tx.rs  config.rs  crank.rs  db.rs  eviction.rs  exit_tx.rs  indexer.rs  init_tx.rs  init_tx_block.rs  main.rs  rpc.rs  tx_utils.rs  ws.rs
contracts/: Anchor.toml  package.json
contracts/programs/continuous_clearing_auction/: Cargo.toml
contracts/programs/continuous_clearing_auction/src/: errors.rs  lib.rs
contracts/programs/continuous_clearing_auction/src/instructions/: checkpoint.rs  claim_tokens.rs  exit_bid.rs  mod.rs  (+5 more)
contracts/programs/contracts/src/: lib.rs
contracts/tests/: contracts.ts
docs/plans/: 2026-04-09-cca-solana-contract.md
docs/specs/: 2026-04-09-cca-product-brief-for-design.md  2026-04-09-cca-solana-port-design.md  2026-04-17-backend-frontend-design.md
docs/superpowers/plans/: 2026-04-17-backend-frontend.md  2026-05-04-block-based-emission-implementation.md
docs/superpowers/specs/: 2026-05-04-block-based-emission-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  format.ts  main.tsx  navigation.ts  q64.ts  theme.css
frontend/src/api/: client.ts  mock.ts  types.ts
frontend/src/components/: BidBook.tsx  BidForm.tsx  BidStatusCard.tsx  ConnectButton.tsx  PriceChart.tsx  primitives.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/pages/: AuctionDetail.tsx  Browse.tsx  CreateAuction.tsx  Docs.tsx
(+9 files in other folders)
